Add ways to build containers
Signed-off-by: Yoann Rodière <yoann@hibernate.org>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.application.name=hibernate-github-bot
 
+quarkus.container-image.group=hibernate
+quarkus.container-image.registry=quay.io
+
 quarkus.openshift.labels."app"=hibernate-github-bot
 quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
 quarkus.openshift.env.vars.QUARKUS_GITHUB_APP_APP_ID=TODO
