Use a single property for both Quarkus plugin version and Quarkus platform version
So that GitHub's Dependabot doesn't get confused

--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus-github-app.version>1.0.0</quarkus-github-app.version>
-    <quarkus.version>1.13.0.Final</quarkus.version>
-    <quarkus-plugin.version>1.13.1.Final</quarkus-plugin.version>
+    <!-- Using a single property for both plugin and platform, so that GitHub's Dependabot doesn't get confused -->
+    <quarkus.version>1.13.1.Final</quarkus.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-    <quarkus.platform.version>1.13.1.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -35,7 +34,7 @@
     <dependency>
       <groupId>io.quarkiverse.githubapp</groupId>
       <artifactId>quarkus-github-app</artifactId>
-      <version>${quarkus-github-app.version}</version>
+      <version>${quarkus.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -60,7 +59,7 @@
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus-plugin.version}</version>
+        <version>${quarkus.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
