--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.application.name=hibernate-github-bot
 
+quarkus.jib.base-jvm-image=openjdk:17.0.1
+
 quarkus.container-image.group=hibernate
 quarkus.container-image.registry=quay.io
 
