--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-github-app.version>1.16.0</quarkus-github-app.version>
+    <quarkus-github-app.version>2.0.0.Alpha1</quarkus-github-app.version>
     <!-- Using a single property for both plugin and platform, so that GitHub's Dependabot doesn't get confused -->
-    <quarkus.version>2.16.3.Final</quarkus.version>
+    <quarkus.version>3.0.0.Alpha4</quarkus.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <surefire-plugin.version>3.0.0-M9</surefire-plugin.version>
