--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.application.name=hibernate-github-bot
+quarkus.application.version=${buildNumber:999-SNAPSHOT}
 
 quarkus.jib.base-jvm-image=openjdk:17.0.1
 
