--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.application.name=hibernate-github-bot
-quarkus.application.version=${buildNumber:999-SNAPSHOT}
+
+quarkus.management.enabled=true
+quarkus.info.enabled=true
 
 quarkus.jib.base-jvm-image=openjdk:17.0.1
 
