Patterns to ignore some files in Jira checks
Because we may not require a Jira issue for build config, for example.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ quarkus.application.name=hibernate-github-bot
 quarkus.management.enabled=true
 quarkus.info.enabled=true
 
+quarkus.cache.caffeine."glob-cache".maximum-size=200
+
 quarkus.jib.base-jvm-image=openjdk:17.0.1
 
 quarkus.container-image.group=hibernate
