--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <quarkus.version>3.5.0</quarkus.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
+    <glob.version>0.9.0</glob.version>
     <surefire-plugin.version>3.2.1</surefire-plugin.version>
     <assertj.version>3.24.2</assertj.version>
   </properties>
@@ -85,6 +86,15 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.hrakaroo</groupId>
+      <artifactId>glob</artifactId>
+      <version>${glob.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkiverse.githubapp</groupId>
