--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ quarkus.jib.base-jvm-image=openjdk:17.0.1
 quarkus.container-image.group=hibernate
 quarkus.container-image.registry=quay.io
 
-%dev.hibernate-github-bot.dry-run=true
+%dev.hibernate-github-bot.dry-run=false
 
 %test.hibernate-github-bot.dry-run=false
