dependabot: Exclude Quarkus from maven-plugins group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,5 @@ updates:
         patterns:
           - "*maven*plugin*"
           - "org.apache.maven*:*"
+        exclude-patterns:
+          - "io.quarkus*"
