--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,17 @@ quarkus.jib.base-jvm-image=openjdk:17.0.1
 quarkus.container-image.group=hibernate
 quarkus.container-image.registry=quay.io
 
-%dev.hibernate-github-bot.dry-run=false
+hibernate-github-bot.jenkins.github-app-id=347853
+hibernate-github-bot.develocity.uri=https://ge.hibernate.org/
 
-%test.hibernate-github-bot.dry-run=false
+quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.config-key=develocity
+quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.base-package=com.gradle.develocity
+quarkus.rest-client.develocity.uri=${hibernate-github-bot.develocity.uri}
+quarkus.openapi-generator.gradle_enterprise_2023_4_api_yaml.auth.DevelocityAccessKey.bearer-token=${hibernate-github-bot.develocity.access-key}
+
+%dev.quarkus.rest-client.logging.scope=request-response
+%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
+%dev.quarkus.log.category."io.quarkus.arc".level=DEBUG
+
+%dev,test.hibernate-github-bot.dry-run=false
+%dev,test.hibernate-github-bot.develocity.access-key=foo
