Move to Qute for report rendering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ quarkus.application.name=hibernate-github-bot
 quarkus.management.enabled=true
 quarkus.info.enabled=true
 
+quarkus.qute.suffixes=md
+quarkus.qute.content-types."md"=text/markdown
+
 quarkus.cache.caffeine."glob-cache".maximum-size=200
 
 quarkus.jib.base-jvm-image=openjdk:17.0.1
