Remove some unnecessary logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ quarkus.openapi-generator.gradle_enterprise_2023_4_api_yaml.auth.DevelocityAcces
 
 %dev.quarkus.rest-client.logging.scope=request-response
 %dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
-%dev.quarkus.log.category."io.quarkus.arc".level=DEBUG
+#%dev.quarkus.log.category."io.quarkus.arc".level=DEBUG
 
 %dev,test.hibernate-github-bot.dry-run=false
 %dev,test.hibernate-github-bot.develocity.access-key=foo
