--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <glob.version>0.9.0</glob.version>
+    <quarkus-helm.version>1.2.5</quarkus-helm.version>
     <surefire-plugin.version>3.5.1</surefire-plugin.version>
     <assertj.version>3.26.0</assertj.version>
   </properties>
@@ -80,10 +81,6 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-container-image-jib</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-info</artifactId>
     </dependency>
     <dependency>
@@ -112,6 +109,21 @@
       <artifactId>glob</artifactId>
       <version>${glob.version}</version>
     </dependency>
+    <!-- Deployment: -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-openshift</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-container-image-jib</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.helm</groupId>
+      <artifactId>quarkus-helm</artifactId>
+      <version>${quarkus-helm.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>io.quarkiverse.githubapp</groupId>
       <artifactId>quarkus-github-app-testing</artifactId>
