Use an additional application properties file for deployment
to replicate what the original deployment was doing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,11 @@ quarkus.openshift.part-of=hibernate-github-bot
 # This requires an additional controller to run on the OpenShift cluster (in our case it does).
 # See https://github.com/tnozicka/openshift-acme/#enabling-acme-certificates-for-your-object
 quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
-quarkus.openshift.env.configmaps=hibernate-github-bot-config
+quarkus.openshift.env.configmaps=hibernate-github-bot-config,hibernate-github-bot-application-properties-config
 quarkus.openshift.env.secrets=hibernate-github-bot-secrets
+# mount the config map as an application.properties:
+quarkus.openshift.mounts.app-config.path=/home/jboss/config
+quarkus.openshift.config-map-volumes.app-config.config-map-name=hibernate-github-bot-application-properties-config
 # Resource requirements
 quarkus.openshift.resources.limits.cpu=600m
 quarkus.openshift.resources.requests.cpu=400m
