Ignore LTS versions for OpenApi generator

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,4 +21,6 @@ updates:
       # Releases too often, it's annoying
       - dependency-name: "org.assertj:*"
         update-types: ["version-update:semver-patch"]
-
+      # We don't want to stay on an LTS version and want to have more regular updates here:
+      - dependency-name: "io.quarkiverse.openapi.generator:*"
+        versions: ["2.6.0-lts"]
