--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
       <artifactId>quarkus-openapi-generator</artifactId>
       <version>${quarkus-openapi-generator.version}</version>
     </dependency>
+    <!--
+      Without the OIDC filter dependency generated client leads to an obscure errors like:
+        > WARN  [io.qua.arc.pro.BeanArchives] Failed to index io.quarkus.oidc.client.runtime.AbstractTokensProducer: Class does not exist in ClassLoader QuarkusClassLoader:Deployment Class Loader: TEST for DevelocityReportFormatterTest (QuarkusTest)@65b19e5c
+     -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-rest-client-oidc-filter</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-rest-client-jackson</artifactId>
