Use the same config key as spec id
to work around a bug in OpenApi generator (io.quarkiverse.openapi.generator to be precise)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ quarkus.cache.caffeine."glob-cache".maximum-size=200
 hibernate-github-bot.jenkins.github-app-id=347853
 hibernate-github-bot.develocity.uri=https://ge.hibernate.org/
 
-quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.config-key=develocity
+quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.config-key=gradle_enterprise_2023_4_api_yaml
 quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.base-package=com.gradle.develocity
-quarkus.rest-client.develocity.uri=${hibernate-github-bot.develocity.uri}
+quarkus.rest-client."gradle_enterprise_2023_4_api_yaml".uri=${hibernate-github-bot.develocity.uri}
 quarkus.openapi-generator.gradle_enterprise_2023_4_api_yaml.auth.DevelocityAccessKey.bearer-token=${hibernate-github-bot.develocity.access-key}
 
 %dev.quarkus.rest-client.logging.scope=request-response
