--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus-github-app.version>2.8.1</quarkus-github-app.version>
-    <quarkus-openapi-generator.version>2.7.0-lts</quarkus-openapi-generator.version>
+    <quarkus-openapi-generator.version>2.7.0</quarkus-openapi-generator.version>
     <!-- Using a single property for both plugin and platform, so that GitHub's Dependabot doesn't get confused -->
     <quarkus.version>3.17.3</quarkus.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
@@ -100,13 +100,10 @@
       <artifactId>quarkus-openapi-generator</artifactId>
       <version>${quarkus-openapi-generator.version}</version>
     </dependency>
-    <!--
-      Without the OIDC filter dependency generated client leads to an obscure errors like:
-        > WARN  [io.qua.arc.pro.BeanArchives] Failed to index io.quarkus.oidc.client.runtime.AbstractTokensProducer: Class does not exist in ClassLoader QuarkusClassLoader:Deployment Class Loader: TEST for DevelocityReportFormatterTest (QuarkusTest)@65b19e5c
-     -->
     <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-rest-client-oidc-filter</artifactId>
+      <groupId>io.quarkiverse.openapi.generator</groupId>
+      <artifactId>quarkus-openapi-generator-oidc</artifactId>
+      <version>${quarkus-openapi-generator.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
