Automatically add PR tasks depending on the jira issue type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,11 @@ quarkus.openapi-generator.gradle_enterprise_2023_4_api_yaml.auth.DevelocityAcces
 %dev,test.hibernate-github-bot.dry-run=false
 %dev,test.hibernate-github-bot.develocity.access-key=foo
 
+hibernate-github-bot.jira.uri=https://hibernate.atlassian.net/
+hibernate-github-bot.jira.username=
+hibernate-github-bot.jira.token=
+quarkus.rest-client.jira.url=${hibernate-github-bot.jira.uri}
+
 ##############
 # Deployment configuration:
 #
