--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ quarkus.openapi-generator.gradle_enterprise_2023_4_api_yaml.auth.DevelocityAcces
 %dev,test.hibernate-github-bot.develocity.access-key=foo
 
 hibernate-github-bot.jira.uri=https://hibernate.atlassian.net/
-hibernate-github-bot.jira.username=
-hibernate-github-bot.jira.token=
+hibernate-github-bot.jira.username=foo
+hibernate-github-bot.jira.token=bar
 quarkus.rest-client.jira.url=${hibernate-github-bot.jira.uri}
 
 ##############
