HIB-140 Switch to develocity.commonhaus.dev instance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.qute.content-types."md"=text/markdown
 quarkus.cache.caffeine."glob-cache".maximum-size=200
 
 hibernate-github-bot.jenkins.github-app-id=347853
-hibernate-github-bot.develocity.uri=https://ge.hibernate.org/
+hibernate-github-bot.develocity.uri=https://develocity.commonhaus.dev/
 
 quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.config-key=gradle_enterprise_2023_4_api_yaml
 quarkus.openapi-generator.codegen.spec.gradle_enterprise_2023_4_api_yaml.base-package=com.gradle.develocity
